--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -26,10 +26,8 @@ jobs:
 
       - name: Build
         run: |
-          cd core-web-app        
           dotnet build --no-restore
 
       - name: Publish
         run: |
-          cd core-web-app
-          dotnet publish --no-build -c Release -o "./published"
+          dotnet publish -c Release -o "./published"
