--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -26,8 +26,10 @@ jobs:
 
       - name: Build
         run: |
+          cd core-web-app
           dotnet build --no-restore
 
       - name: Publish
         run: |
+          cd core-web-app
           dotnet publish -c Release -o "./published"
