--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -3,8 +3,8 @@ name: "Build and Deploy"
 on: [push, workflow_dispatch]
 
 env:
-  AZURE_WEBAPP_NAME: aspnet-core-web-app
-  AURE_WEBAPP_PACKAGE_NAME: "./published"
+  AZURE_WEBAPP_NAME: rg-github-deploy
+  AZURE_WEBAPP_PACKAGE_NAME: "./published"
   NETCORE_VERSION: "3.1.101"
 
 jobs:
@@ -32,4 +32,11 @@ jobs:
       - name: Publish
         run: |
           cd core-web-app
-          dotnet publish -c Release -o "./published"
+          dotnet publish -configuration Release --output ${{ env.AZURE_WEBAPP_PACKAGE_NAME }}
+
+      - name: Deploy to Azure
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secret.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_NAME }}
