--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Publish
         run: |
           cd core-web-app
-          dotnet publish -configuration Release --output ${{ env.AZURE_WEBAPP_PACKAGE_NAME }}
+          dotnet publish --configuration Release --output ${{ env.AZURE_WEBAPP_PACKAGE_NAME }}
 
       - name: Deploy to Azure
         uses: azure/webapps-deploy@v2
