fixed output path

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -4,7 +4,7 @@ on: [push, workflow_dispatch]
 
 env:
   AZURE_WEBAPP_NAME: wa-github-deploy
-  AZURE_WEBAPP_PACKAGE_NAME: "./published"
+  AZURE_WEBAPP_PACKAGE_NAME: "../published"
   NETCORE_VERSION: "3.1.101"
 
 jobs:
