--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           cd core-web-app
           dotnet publish --configuration Release --output ${{ env.AZURE_WEBAPP_PACKAGE_NAME }}
-      - name: Deploy to Azure
-uses: Azure/pipelines@v1
+  - name: Azure Pipelines Action
+  uses: Azure/pipelines@v1
   with:
     azure-devops-project-url: 'https://dev.azure.com/DevopsCPTTraining/EngageDemo'
     azure-pipeline-name: 'Github-Actions-CD' # name of the Azure pipeline to be triggered
