--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,7 @@
 name: CI
 
 # Run this workflow every time a commit is pushed to main or a pull request is opened against main
-on:
-push:
-    branches: [ main ]
-pull_request:
-    branches: [ main ]
+on: push
 
 jobs:
     build:
