--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run build script
-        run: ls
+        run: pwd
         shell: bash
