--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run build script
-        run: pwd
+        run: ./home/runner/work/core-web-app/core-web-app/.github/scripts/build.sh
         shell: bash
